# laya

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  README.md  deny.toml  laya.code-workspace  rustfmt.toml
.cargo/: config.toml
.github/: build-targets.yml
.github/workflows/: build.yml  checks.yml  deploy.yml  publish.yml  test.yml
share/: rustc.wrap
src/: http.rs  iiif.rs  image.rs  lib.rs  main.rs  runtime.rs  storage.rs  telemetry.rs
src/iiif/: http.rs  info.rs  parse.rs  service.rs
src/image/: codec.rs  info.rs  locator.rs  metadata.rs  pipeline.rs  reader.rs  transcoding.rs
src/image/codec/: kaduceus.rs
src/image/metadata/: kaduceus.rs
src/image/reader/: kaduceus.rs
src/image/transcoding/: decode.rs  encode.rs
src/runtime/: glommio.rs  tokio.rs
src/storage/: opendal.rs
