[package]
name = "laya"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

# Config for 'cargo dist'
[[workspace.metadata.distributions]]
name = "x64-generic"
triple = "x86_64-unknown-linux-gnu"
cpu = "x86-64-v3"
runner = "ubuntu-latest"
docker = "linux/amd64"
generic = true

[[workspace.metadata.distributions]]
name = "arm64-generic"
triple = "aarch64-unknown-linux-gnu"
cpu = "neoverse-v1"
generic = true
docker = "linux/arm64"

[[workspace.metadata.distributions]]
name = "apple"
triple = "aarch64-apple-darwin"
cpu = "apple-latest"
runner = "macos-latest"
generic = true
docker = false

[[workspace.metadata.distributions]]
name = "amd-zen4"
triple = "x86_64-unknown-linux-gnu"
cpu = "znver4"
generic = false
docker = "linux/amd64"

[[workspace.metadata.distributions]]
name = "intel-xeon-gen4"
triple = "x86_64-unknown-linux-gnu"
cpu = "sapphirerapids"
generic = false
docker = "linux/amd64"

[[workspace.metadata.distributions]]
triple = "aarch64-unknown-linux-gnu"
cpu = "neoverse-v2"
name = "aws-graviton4"
generic = false
docker = "linux/arm64/v8"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[features]
default = ["rt-tokio", "kaduceus"]
kaduceus = ["dep:kaduceus"]
rt-tokio = ["dep:tokio"]
rt-glommio = []

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = { version = "0.6" }
config = { version = "0.14", features = ["toml", "json"] }
kaduceus = { version = "0.1.0", path = "kaduceus", optional = true }
futures = { version = "0.3" }
headers-accept = { version = "0.1" }
http-body = { version = "1" }
http-body-util = { version = "0.1" }
hyper = { version = "1.4.1", features = ["server", "http2", "http1"] }
hyper-util = { version = "0.1.6", features = [
    "server-auto",
    "server",
    "service",
    "http2",
    "http1",
    "tokio",
] }
mediatype = { version = "0.19" }
opentelemetry = { version = "0.26", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.26", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.26", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-client",
] }
opentelemetry-resource-detectors = { version = "0.5.0" }
opentelemetry-semantic-conventions = { version = "0.26", features = [
    "semconv_experimental",
] }
num_cpus = { version = "1" }
once_cell = { version = "1" }
serde = { version = "1" }
tracing = { version = "0.1" }
tracing-error = { version = "0.2" }
tracing-opentelemetry = { version = "0.27" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["full"], optional = true }
tower = { version = "0.5.1", features = ["tracing", "util"] }
tower-http = { version = "0.6.1", features = [
    "cors",
    "catch-panic",
    "normalize-path",
    "sensitive-headers",
    "request-id",
    "timeout",
    "trace",
    "tracing",
] }
urlencoding = { version = "2" }
