[package]
name = "laya"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

# Config for 'cargo dist'
[[workspace.metadata.distributions]]
name = "x64-generic"
triple = "x86_64-unknown-linux-gnu"
cpu = "x86-64-v3"
runner = "ubuntu-24.04"
docker = "linux/amd64"
generic = true

[[workspace.metadata.distributions]]
name = "arm64-generic"
triple = "aarch64-unknown-linux-gnu"
cpu = "neoverse-v2"
generic = true
docker = "linux/arm64/v8"
runner = "ubuntu-24.04-arm"

[[workspace.metadata.distributions]]
name = "x86-64-v4"
triple = "x86_64-unknown-linux-gnu"
cpu = "x86-64-v4"
docker = "linux/amd64/v4"

[[workspace.metadata.distributions]]
name = "x86-64-v3"
triple = "x86_64-unknown-linux-gnu"
cpu = "x86-64-v3"
docker = "linux/amd64/v3"

[[workspace.metadata.distributions]]
triple = "aarch64-unknown-linux-gnu"
cpu = "neoverse-v2"
name = "aws-graviton4"
runner = "ubuntu-24.04-arm"
generic = false
docker = "linux/arm64/v8"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
incremental = false
debug = "full"
split-debuginfo = "packed"

[features]
default = ["rt-tokio", "kaduceus"]
kaduceus = ["dep:kaduceus"]
rt-tokio = ["dep:tokio"]
rt-glommio = []

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = { version = "0.6" }
config = { version = "0.15", features = ["toml", "json"] }
kaduceus = { version = "0.1.0", git = "https://github.com/digirati-co-uk/kaduceus", optional = true }
futures = { version = "0.3" }
headers-accept = { version = "0.1" }
http-body = { version = "1" }
http-body-util = { version = "0.1" }
hyper = { version = "1.6", features = ["server", "http2", "http1"] }
hyper-util = { version = "0.1", features = [
    "server-auto",
    "server",
    "service",
    "http2",
    "http1",
    "tokio",
] }
mediatype = { version = "0.19" }
opentelemetry = { version = "0.28", features = ["trace", "metrics", ] }
opentelemetry-xray = "0.1"
opentelemetry-http = { version = "0.28" }
opentelemetry_sdk = { version = "0.28", default-features = false, features = [
    "trace",
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime"
] }
opentelemetry-otlp = { version = "0.28", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-client",
] }
opentelemetry-resource-detectors = "0.7.0"
opentelemetry-semantic-conventions = { version = "0.28", features = [
    "semconv_experimental",
] }
num_cpus = { version = "1" }
serde = { version = "1" }
tracing = { version = "0.1" }
tracing-error = { version = "0.2" }
tracing-opentelemetry = { version = "0.29" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.44", features = ["full"], optional = true }
tower = { version = "0.5", features = ["tracing", "util"] }
tower-http = { version = "0.6", features = [
    "cors",
    "catch-panic",
    "normalize-path",
    "sensitive-headers",
    "request-id",
    "timeout",
    "trace",
    "tracing",
] }
urlencoding = { version = "2" }
opentelemetry-aws = "0.16.0"
tracing-opentelemetry-instrumentation-sdk = { version = "0.26.0", features = ["http", "tracing_level_info"] }
